--- a/libbuddy/package.json
+++ b/libbuddy/package.json
@@ -13,19 +13,24 @@
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.4",
     "framer-motion": "^12.15.0",
+    "he": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@types/he": "^1.2.3",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^22.15.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
